--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-{% comment %}<div class="page__footer-follow">{% endcomment %}
+<!--<div class="page__footer-follow">{% endcomment %}
   {% comment %}<ul class="social-icons">{% endcomment %}
     {% comment %}{% if site.data.ui-text[site.locale].follow_label %}{% endcomment %}
       {% comment %}<li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>{% endcomment %}
@@ -16,6 +16,6 @@
       {% comment %}<li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>{% endcomment %}
     {% comment %}{% endunless %}{% endcomment %}
   {% comment %}</ul>{% endcomment %}
-{% comment %}</div>{% endcomment %}
+{% comment %}</div>--!>
 
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
