--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,21 @@
-<!--<div class="page__footer-follow">{% endcomment %}
-  {% comment %}<ul class="social-icons">{% endcomment %}
-    {% comment %}{% if site.data.ui-text[site.locale].follow_label %}{% endcomment %}
-      {% comment %}<li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>{% endcomment %}
-    {% comment %}{% endif %}{% endcomment %}
+<!--<div class="page__footer-follow">
+   <ul class="social-icons">
+    {% if site.data.ui-text[site.locale].follow_label %}
+      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
+    {% endif %}
 
-    {% comment %}{% if site.footer.links %}{% endcomment %}
-      {% comment %}{% for link in site.footer.links %}{% endcomment %}
-        {% comment %}{% if link.label and link.url %}{% endcomment %}
-          {% comment %}<li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>{% endcomment %}
-        {% comment %}{% endif %}{% endcomment %}
-      {% comment %}{% endfor %}{% endcomment %}
-    {% comment %}{% endif %}{% endcomment %}
+    {% if site.footer.links %}
+      {% for link in site.footer.links %}
+        {% if link.label and link.url %}
+          <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>
+        {% endif %}
+      {% endfor %}
+    {% endif %}
 
-    {% comment %}{% unless site.atom_feed.hide %}{% endcomment %}
-      {% comment %}<li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>{% endcomment %}
-    {% comment %}{% endunless %}{% endcomment %}
-  {% comment %}</ul>{% endcomment %}
-{% comment %}</div>--!>
+    {% unless site.atom_feed.hide %}
+      <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
+    {% endunless %}
+  </ul>
+</div>--!>
 
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
