--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,4 +19,8 @@ html {
       font-size: 18px; // change to whatever
     }
   }
-
+.author__avatar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
